--- a/src/components/CryptoDetails.css
+++ b/src/components/CryptoDetails.css
@@ -50,6 +50,14 @@
   color: var(--accent-1);
 }
 
+.coin-header-dark {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  color: var(--accent-2);
+}
+
 .ranking {
   display: flex;
   flex-direction: column;
@@ -95,6 +103,25 @@
   border-radius: 5px;
 }
 
+.coin-header-stats-dark {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+  padding: 20px;
+  background: linear-gradient(to right, var(--accent-2) 50%, transparent 50%);
+  background-size: 201% 100%;
+  background-position: right;
+  transition: all 0.35s ease-out;
+  width: fit-content;
+}
+
+.coin-header-stats-dark:hover {
+  background-position: left;
+  border-radius: 5px;
+  color: black;
+}
+
 .coin-header-stats-name {
   display: flex;
   margin: 10px;
@@ -133,7 +160,7 @@
 .coin-details-heading {
   font-weight: 700 !important;
   margin-top: 20px !important;
-  color: var(--accent-1) !important;
+  /* color: var(--accent-1) !important; */
 }
 
 /* coin-stats hover start */
@@ -157,6 +184,24 @@
 .coin-stats:hover {
   background-position: left;
   border-radius: 5px;
+}
+
+.coin-stats-dark {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--light-2);
+  font-size: 1rem;
+  padding: 20px;
+  background: linear-gradient(to right, var(--accent-2) 50%, var(--dark-2) 50%);
+  background-size: 201% 100%;
+  background-position: right;
+  transition: all 0.35s ease-out;
+}
+
+.coin-stats-dark:hover {
+  background-position: left;
+  border-radius: 5px;
+  color: black;
 }
 
 /*coin-stats hover end*/
@@ -184,13 +229,9 @@
   background-color: var(--dark-3);
 }
 
-.coin-value-statistics-light {
+.coin-value-statistics {
   background-color: #a9f0d1;
 }
-
-/* #cfffb3 */
-/* #4d9de0 */
-/* #9dd9d2 */
 
 .coin-value-statistics:hover {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
@@ -204,21 +245,29 @@
 .other-stats-info {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  border-radius: 20px;
-  padding: 3%;
-  background-color: #a9f0d1;
+  border-radius: 15px;
+  padding: 20px;
+  background-color: var(--accent-2);
+  min-width: 315px;
+  margin: 10px;
 }
 
 .other-stats-info-dark {
-  background-color: var(--dark-3);
-}
-
-.other-stats-info-light {
-  background-color: #a9f0d1;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  border-radius: 15px;
+  padding: 20px;
+  background-color: var(--dark-2);
+  min-width: 315px;
+  margin: 10px;
 }
 
 .other-stats-info:hover {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.other-stats-info-dark:hover {
+  box-shadow: 0 14px 28px grey, 0 10px 10px grey;
 }
 
 .coin-desc-link {
@@ -247,18 +296,18 @@
   color: var(--accent-1);
 }
 
-.coin-desc-link h3 {
+/* .coin-desc-link h3 {
   font-weight: 700;
-}
+} */
 
 .coin-desc {
   flex: 0.5;
   margin: 10px;
 }
 
-.coin-desc > h3 {
+/* .coin-desc > h3 {
   color: var(--accent-1);
-}
+} */
 
 .coin-desc > p {
   flex: 0.5;
@@ -272,20 +321,6 @@
   flex-direction: column;
   flex: 0.3;
   margin: 10px;
-}
-
-.other-stats-info {
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  border-radius: 15px;
-  padding: 20px;
-  background-color: var(--accent-2);
-  min-width: 315px;
-  margin: 10px;
-}
-
-.other-stats-info:hover {
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .coin-links {
@@ -309,6 +344,29 @@
   transition: all 0.35s ease-out;
 }
 
+.coin-link:hover {
+  background-position: left;
+  border-radius: 5px;
+}
+
+.coin-link-dark {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid var(--light-2);
+  padding: 20px;
+  background: linear-gradient(to right, var(--accent-2) 49.9%, transparent 50%);
+  background-size: 200% 100%;
+  background-position: right;
+  transition: all 0.35s ease-out;
+}
+
+.coin-link-dark:hover {
+  background-position: left;
+  border-radius: 5px;
+  color: black;
+}
+
 .link-name {
   text-transform: capitalize;
   font-size: 1rem;
@@ -319,20 +377,6 @@
   font-weight: 700;
   font-size: 1rem;
   z-index: 2;
-}
-
-.coin-link-light:hover,
-.coin-stats-light:hover {
-  background-color: var(--bgSecondary);
-}
-.coin-link:hover {
-  background-position: left;
-  border-radius: 5px;
-}
-
-.coin-link-dark:hover,
-.coin-stats-dark:hover {
-  background-color: var(--light-3);
 }
 
 @media screen and (max-width: 1000px) {
